# smesh-accessors-old

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/smesh/: accessors-common.hpp  cap-holes.hpp  collapse-edges.hpp  common.hpp  compute-elinks.hpp  compute-normals.hpp  dense-map.hpp  edge-links.hpp  io.hpp  mesh-utils.hpp  segment.hpp  smesh.hpp  solid.hpp  storage.hpp  vert-poly-links.hpp
include/smesh/unsupported/: remap.hpp  weld.hpp
test/: .gitignore  CMakeLists.txt  cap-holes.cpp  collapse-edges.cpp  common.hpp  compute-elinks.hpp  compute-normals.cpp  const.cpp  dense-map.cpp  elinks.cpp  gtest-init.cpp  links.cpp  main.cpp  sphere-holes.ply
travis/: fix-gtest.sh
